fix visual issue with filters menu blocked by results footer on mobile only

--- a/app/styles/components/menus/_filters_menu.scss
+++ b/app/styles/components/menus/_filters_menu.scss
@@ -67,3 +67,12 @@
     margin-bottom: $tiny-size;
   }
 }
+
+.layer-filters {
+  .layer-content {
+    padding-bottom: $x-large-size + $tiny-size;
+    @include desktop {
+      padding-bottom: $small-size;
+    }
+  }
+}
